# site-2021

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.dhall  deploy.bat  deploy.sh  release.sh  techpriestsite.service
.github/: FUNDING.yml
blog/: first-launch-2021-05-15.md  gpl-static-linking-2021-10-20.md  homestuck-readthrough-announcement-2021-07-03.md  rant-about-what-pumpkin-2021-07-01.md  retiring-kirigiri-2021-10-25.md  telemetry-and-audacity-2021-05-18.md  warhammer-40k-horus-heresy-2021-08-06.md
css/: hack.css  prism.css
examples/: blog-example-2021-05-15.md  warp.rs
gallery/: dummy.md
lib/patreon/: Cargo.toml
src/: main.rs
src/app/: markdown.rs  mod.rs
src/handlers/: blog.rs  feeds.rs  gallery.rs  mod.rs
src/post/: frontmatter.rs  mod.rs
static/: manifest.json  robots.txt
static/js/: prism.js  sw.js
static/resume/: resume.md
templates/: blog_atom.rs.xml  blog_rss.rs.xml  blogindex.rs.html  blogpost.rs.html  contact.rs.html  error.rs.html  footer.rs.html  galleryindex.rs.html  gallerypost.rs.html  header.rs.html  index.rs.html  notfound.rs.html  patrons.rs.html
